# fertilizer

./: LICENSE  README.md  pyproject.toml
src/fertilizer/: __init__.py  cli.py  diff.py  extract.py
tests/: test_cli.py  test_diff.py
